--- a/app/views/v1/organisation-details.html
+++ b/app/views/v1/organisation-details.html
@@ -22,7 +22,7 @@
 
     <h1 class="govuk-heading-xl">Organisation details</h1>
 
-      <form method="post" action="/v1/do-you-have-a-grant-agreement-number">
+      <form method="post" action="{{ formAction }}">
 
         <!-- Name -->
         {{ govukInput({
@@ -36,22 +36,6 @@
           id: "organisation-name",
           name: "organisation-name",
           value: data["organisation-name"]
-        }) }}
-
-
-        <!-- Companies House or Charity Commission number -->
-        {{ govukInput({
-          id: "companies-house-or-charity-commission-number",
-          name: "companies-house-or-charity-commission-number",
-          type: "text",
-          label: {
-            text: "Companies House or Charity Commission number",
-            classes: "govuk-label--s"
-          },
-          hint: {
-            text: "If you have both, enter your Companies House number"
-          },
-          value: data["companies-house-or-charity-commission-number"]
         }) }}
 
 
