--- a/app/views/v1/project-details.html
+++ b/app/views/v1/project-details.html
@@ -44,6 +44,9 @@
           text: "Total amount awarded to your organisation in euros",
           classes: "govuk-label--s"
         },
+        hint: {
+          text: "Enter the amount if it's on the grant agreement or bid"
+        },
         classes: "govuk-input--width-10",
         id: "total-amount-awarded",
         name: "total-amount-awarded",
@@ -56,7 +59,7 @@
         namePrefix: "start-date",
         fieldset: {
           legend: {
-            text: "Start date",
+            text: "Enter the start date if it’s on the grant agreement or bid",
             classes: "govuk-fieldset__legend--s"
           }
         },
@@ -84,12 +87,12 @@
         namePrefix: "end-date",
         fieldset: {
           legend: {
-            text: "End date",
+            text: "Enter the end date if it’s on the grant agreement or bid",
             classes: "govuk-fieldset__legend--s"
           }
         },
         hint: {
-          text: "For example, 12 11 2020"
+          text: "For example, 12 11 2014"
         },
         items: [{
           name: "day",
