Content changes added for John Oates

--- a/app/views/v1/check-your-answers.html
+++ b/app/views/v1/check-your-answers.html
@@ -123,17 +123,17 @@
           },
           {
             key: {
-              text: "Project name"
+              text: "Organisation name"
             },
             value: {
-              text: data["project-name"]
+              text: data["organisation-name"]
             },
             actions: {
               items: [
                 {
                   href: "/v1/organisation-details",
                   text: "Change",
-                  visuallyHiddenText: "project name"
+                  visuallyHiddenText: "organisation name"
                 }
               ]
             }
