--- a/app/views/v1/do-you-have-a-companies-house-or-charity-commission-number.html
+++ b/app/views/v1/do-you-have-a-companies-house-or-charity-commission-number.html
@@ -29,6 +29,9 @@
           id: "companies-house-number",
           name: "companies-house-number",
           label: {
+            text: "Companies House or Charity Commission number"
+          },
+          hint: {
             text: "If you have both, enter your Companies House number"
           },
           classes: "govuk-!-width-two-thirds",
