--- a/app/views/v1/project-details.html
+++ b/app/views/v1/project-details.html
@@ -27,11 +27,11 @@
       <!-- Name -->
       {{ govukInput({
         label: {
-          text: "Name",
+          text: "Project name",
           classes: "govuk-label--s"
         },
         hint: {
-          text: "Enter the project name as it appears on the grant agreement or bid"
+          text: "As the name appears on the grant agreement or bid"
         },
         id: "project-name",
         name: "project-name",
@@ -45,7 +45,7 @@
           classes: "govuk-label--s"
         },
         hint: {
-          text: "Enter the amount if it's on the grant agreement or bid"
+          text: "Enter the amount if it’s on the grant agreement or bid"
         },
         classes: "govuk-input--width-10",
         id: "total-amount-awarded",
