--- a/app/views/v1/who-should-we-contact-about-the-grant-award.html
+++ b/app/views/v1/who-should-we-contact-about-the-grant-award.html
@@ -61,7 +61,7 @@
           classes: "govuk-label--s"
         },
         hint: {
-          text: "We’ll only use this to contact you about the grant award"
+          text: "We’ll only use this to contact them about the grant award"
         },
         id: "email-address",
         name: "email-address",
