--- a/app/views/v1/do-you-have-a-grant-agreement-number.html
+++ b/app/views/v1/do-you-have-a-grant-agreement-number.html
@@ -22,7 +22,7 @@
 
     <h1 class="govuk-heading-xl">Do you have a grant agreement number?</h1>
 
-    <p>It might be called a project ID, proposal ID or action number.</p>
+    <p>This might also be called a project ID, proposal ID or action number.</p>
 
     <form method="post" action="{{ formAction }}">
 
@@ -31,7 +31,7 @@
           id: "grant-agreement-number",
           name: "grant-agreement-number",
           label: {
-            text: "Enter your grant agreement number"
+            text: "Grant agreement number"
           },
           classes: "govuk-!-width-two-thirds",
           value: data["grant-agreement-number"]
