--- a/app/views/v1/what-programme-do-you-receive-funding-from.html
+++ b/app/views/v1/what-programme-do-you-receive-funding-from.html
@@ -22,7 +22,7 @@
 
     <h1 class="govuk-heading-xl">What programme do you receive funding from?</h1>
 
-    <p>If you have not yet received funding, select the programme you applied to.</p>
+    <p>If you have not yet received funding, select the programme you applied to. You’ll need to register separately for each programme.</p>
 
     <form method="post" action="{{ formAction }}">
 
