Content changes added for John Oates

--- a/app/views/v1/project-details.html
+++ b/app/views/v1/project-details.html
@@ -59,12 +59,12 @@
         namePrefix: "start-date",
         fieldset: {
           legend: {
-            text: "Enter the start date if it’s on the grant agreement or bid",
+            text: "Start date",
             classes: "govuk-fieldset__legend--s"
           }
         },
         hint: {
-          text: "For example, 12 11 2014"
+          text: "Enter the date if it’s on the grant agreement or bid, for example 12 11 2014"
         },
         items: [{
           name: "day",
@@ -87,12 +87,12 @@
         namePrefix: "end-date",
         fieldset: {
           legend: {
-            text: "Enter the end date if it’s on the grant agreement or bid",
+            text: "End date",
             classes: "govuk-fieldset__legend--s"
           }
         },
         hint: {
-          text: "For example, 12 11 2014"
+          text: "Enter the date if it’s on the grant agreement or bid, for example 12 11 2020"
         },
         items: [{
           name: "day",
