Content tweaks and changes

--- a/app/views/v1/check-your-answers.html
+++ b/app/views/v1/check-your-answers.html
@@ -37,6 +37,7 @@
             actions: {
               items: [
                 {
+                  classes: "govuk-link govuk-link--no-visited-state",
                   href: "/v1/who-should-we-contact-about-the-grant-award",
                   text: "Change",
                   visuallyHiddenText: "full name"
@@ -54,6 +55,7 @@
             actions: {
               items: [
                 {
+                  classes: "govuk-link govuk-link--no-visited-state",
                   href: "/v1/who-should-we-contact-about-the-grant-award",
                   text: "Change",
                   visuallyHiddenText: "job title"
@@ -71,6 +73,7 @@
             actions: {
               items: [
                 {
+                  classes: "govuk-link govuk-link--no-visited-state",
                   href: "/v1/who-should-we-contact-about-the-grant-award",
                   text: "Change",
                   visuallyHiddenText: "email address"
@@ -88,6 +91,7 @@
             actions: {
               items: [
                 {
+                  classes: "govuk-link govuk-link--no-visited-state",
                   href: "/v1/who-should-we-contact-about-the-grant-award",
                   text: "Change",
                   visuallyHiddenText: "telephone number"
@@ -114,6 +118,7 @@
             actions: {
               items: [
                 {
+                  classes: "govuk-link govuk-link--no-visited-state",
                   href: "/v1/organisation-type",
                   text: "Change",
                   visuallyHiddenText: "organisation type"
@@ -131,6 +136,7 @@
             actions: {
               items: [
                 {
+                  classes: "govuk-link govuk-link--no-visited-state",
                   href: "/v1/organisation-details",
                   text: "Change",
                   visuallyHiddenText: "organisation name"
@@ -149,6 +155,7 @@
             actions: {
               items: [
                 {
+                  classes: "govuk-link govuk-link--no-visited-state",
                   href: "/v1/organisation-details",
                   text: "Change",
                   visuallyHiddenText: "organisation address"
@@ -158,7 +165,7 @@
           },
           {
             key: {
-              text: "Companies House or Charity Commission number"
+              text: "Company or charity registration number"
             },
             value: {
               text: data["companies-house-number"]
@@ -166,9 +173,10 @@
             actions: {
               items: [
                 {
-                  href: "/v1/do-you-have-a-companies-house-or-charity-commission-number",
+                  classes: "govuk-link govuk-link--no-visited-state",
+                  href: "/v1/do-you-have-a-company-or-charity-registration-number",
                   text: "Change",
-                  visuallyHiddenText: "Companies House or Charity Commission number"
+                  visuallyHiddenText: "Company or charity registration number"
                 }
               ]
             }
@@ -192,6 +200,7 @@
             actions: {
               items: [
                 {
+                  classes: "govuk-link govuk-link--no-visited-state",
                   href: "/v1/do-you-have-a-grant-agreement-number",
                   text: "Change",
                   visuallyHiddenText: "grant agreement number"
@@ -209,6 +218,7 @@
             actions: {
               items: [
                 {
+                  classes: "govuk-link govuk-link--no-visited-state",
                   href: "/v1/what-programme-do-you-receive-funding-from",
                   text: "Change",
                   visuallyHiddenText: "name of programme"
@@ -226,6 +236,7 @@
             actions: {
               items: [
                 {
+                  classes: "govuk-link govuk-link--no-visited-state",
                   href: "/v1/project-details",
                   text: "Change",
                   visuallyHiddenText: "project name"
@@ -243,6 +254,7 @@
             actions: {
               items: [
                 {
+                  classes: "govuk-link govuk-link--no-visited-state",
                   href: "/v1/project-details",
                   text: "Change",
                   visuallyHiddenText: "total amount awarded"
@@ -260,6 +272,7 @@
             actions: {
               items: [
                 {
+                  classes: "govuk-link govuk-link--no-visited-state",
                   href: "/v1/project-details",
                   text: "Change",
                   visuallyHiddenText: "start date"
@@ -277,6 +290,7 @@
             actions: {
               items: [
                 {
+                  classes: "govuk-link govuk-link--no-visited-state",
                   href: "/v1/project-details",
                   text: "Change",
                   visuallyHiddenText: "end date"
@@ -294,6 +308,7 @@
             actions: {
               items: [
                 {
+                  classes: "govuk-link govuk-link--no-visited-state",
                   href: "/v1/does-the-project-have-partners-or-participants-outside-the-uk",
                   text: "Change",
                   visuallyHiddenText: "non UK partners"
@@ -325,8 +340,6 @@
         <h2 class="govuk-heading-m">Now send your details</h2>
 
         <p>By submitting this form you authorise the Cabinet Office Grants Management Function to share your information with the government department responsible for the EU programme you receive funding from.</p>
-
-        <!--p>By submitting this form you’re confirming that, to the best of your knowledge, the details you’re providing are correct.</p-->
 
         {{ govukButton({
           text: "Accept and send"
