--- a/app/views/v1/confirmation.html
+++ b/app/views/v1/confirmation.html
@@ -23,11 +23,9 @@
 
       <p>We will send your details to the government department responsible for the fund you’ve said you receive.</p>
 
-      <!--p>We’ve sent your details to the government department responsible for the fund you’ve said you receive.</p-->
-
       <p>They will contact you either to confirm your registration, or to ask for more information.</p>
 
-      <p><a href="#" class="govuk-link">What did you think of this service?</a> (takes 30 seconds)</p>
+      <p><a class="govuk-link govuk-link--no-visited-state" href="#">What did you think of this service?</a> (takes 30 seconds)</p>
 
     </div>
 
