--- a/app/views/v1/do-you-have-a-company-or-charity-registration-number.html
+++ b/app/views/v1/do-you-have-a-company-or-charity-registration-number.html
@@ -2,7 +2,7 @@
 
 
 {% block pageTitle %}
-  Do you have a Companies House or Charity Commission number? - GOV.UK
+  Do you have a company or charity registration number? - GOV.UK
 {% endblock %}
 
 
@@ -20,19 +20,19 @@
 
   <div class="govuk-grid-column-two-thirds">
 
-    <h1 class="govuk-heading-xl">Do you have a Companies House or Charity Commission number?</h1>
+    <h1 class="govuk-heading-xl">Do you have a company or charity registration number?</h1>
 
     <form method="post" action="{{ formAction }}">
 
-      {% set companiesHouseNumber %}
+      {% set registrationNumber %}
         {{ govukInput({
           id: "companies-house-number",
           name: "companies-house-number",
           label: {
-            text: "Companies House or Charity Commission number"
+            text: "Company or charity registration number"
           },
           hint: {
-            text: "If you have both, enter your Companies House number"
+            text: "If you have both, enter your company registration number"
           },
           classes: "govuk-!-width-two-thirds",
           value: data["companies-house-number"]
@@ -40,21 +40,21 @@
       {% endset -%}
 
       {{ govukRadios({
-        idPrefix: "do-you-have-a-companies-house-or-charity-commission-number",
-        name: "do-you-have-a-companies-house-or-charity-commission-number",
+        idPrefix: "do-you-have-a-company-or-charity-registration-number",
+        name: "do-you-have-a-company-or-charity-registration-number",
         items: [
           {
             value: "Yes",
             html: 'Yes<span class="govuk-visually-hidden">, we have a number</span>',
             conditional: {
-              html: companiesHouseNumber
+              html: registrationNumber
             },
-            checked: checked("do-you-have-a-companies-house-or-charity-commission-number", "Yes")
+            checked: checked("do-you-have-a-company-or-charity-registration-number", "Yes")
           },
           {
             value: "No",
             html: 'No<span class="govuk-visually-hidden">, we don’t have a number</span>',
-            checked: checked("do-you-have-a-companies-house-or-charity-commission-number", "No")
+            checked: checked("do-you-have-a-company-or-charity-registration-number", "No")
           }
         ]
       }) }}
