--- a/app/views/v1/index.html
+++ b/app/views/v1/index.html
@@ -45,15 +45,15 @@
       </ul>
 
       {{ govukInsetText({
-        html: 'There’s a different way to register if you receive <a href="https://apply-for-innovation-funding.service.gov.uk/eu-grant/overview">Horizon 2020 funding</a>.'
+        html: 'There’s a different way to register if you receive <a class="govuk-link govuk-link--no-visited-state" href="https://apply-for-innovation-funding.service.gov.uk/eu-grant/overview">Horizon 2020 funding</a>.'
       }) }}
 
       <p>Do not register if:</p>
       <ul class="govuk-list govuk-list--bullet">
-        <li>you receive or have applied for funding from a different EU programme - <a href="https://www.gov.uk/guidance/european-and-domestic-funding-after-brexit">check what you need to do instead</a></li>
+        <li>you receive or have applied for funding from a different EU programme - <a class="govuk-link govuk-link--no-visited-state" href="https://www.gov.uk/guidance/european-and-domestic-funding-after-brexit">check what you need to do instead</a></li>
         <li>you’re already in contact with a government department about what will happen to your funding after Brexit</li>
         <li>you’ve already registered on GOV.UK</li>
-        <li>your project will have finished before Brexit but the final payment will come after Brexit - <a href="mailto: helpdesk.grants.registration@cabinetoffice.gov.uk">contact the helpdesk</a> if you’re told that you will not receive the final payment</li>
+        <li>your project will have finished before Brexit but the final payment will come after Brexit - <a class="govuk-link govuk-link--no-visited-state" href="mailto: helpdesk.grants.registration@cabinetoffice.gov.uk">contact the helpdesk</a> if you’re told that you will not receive the final payment</li>
       </ul>
 
       <p class="govuk-body">Registering takes about 10 minutes.</p>
@@ -79,7 +79,7 @@
 
       <h2 class="govuk-heading-m">Privacy</h2>
 
-      <p>Read the <a href="https://www.gov.uk/government/publications/privacy-notice-for-grants-management-function-recipient-registration">privacy notice</a> for registration.</p>
+      <p>Read the <a class="govuk-link govuk-link--no-visited-state" href="https://www.gov.uk/government/publications/privacy-notice-for-grants-management-function-recipient-registration">privacy notice</a> for registration.</p>
 
     </div>
 
@@ -89,8 +89,7 @@
         <h2 class="govuk-heading-m" id="subsection-title">Related content</h2>
         <nav role="navigation" aria-labelledby="subsection-title">
           <ul class="govuk-list govuk-!-font-size-16">
-            <!--li><a href="/v1/recipient-registration-faq">Frequently Asked Questions</a></li-->
-            <li><a href="https://www.gov.uk/government/publications/european-union-funding">European Union funding</a></li>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="https://www.gov.uk/government/publications/european-union-funding">European Union funding</a></li>
           </ul>
         </nav>
       </aside>
